# InvestmentPortfolioApp

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: issues.yml
backend/: .dockerignore  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/routes/: __init__.py  auth.py  investments.py  users.py
backend/app/models/: investment.py  users.py
deployment/: .env.dev  .env.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml
deployment/docker/: backend.dev.Dockerfile  backend.prod.Dockerfile  frontend.dev.Dockerfile  frontend.prod.Dockerfile
frontend/: index.html
scripts/: build.sh  deploy.sh
