[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "InvestmentPortfolioAPP - Backend"
version = "0.1.0"
readme = "README.md"
license = "MIT"
authors = ["Dtar380"]
maintainers = ["Dtar380"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.127.0"
pydantic = "^2.12.5"
asyncpg = "^0.31.0"
sqlmodel = "^0.0.29"
alembic = "^1.17.2"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
httpx = "^0.28.1"
yfinance = "^1.0"
psycopg = {extras = ["binary"], version = "^3.3.2"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
black = "^25.12.0"
isort = "^7.0.0"
pylint = "^4.0.4"
mypy = "^1.19.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-modern = "^0.7.4"
rich = "^14.2.0"

[tool.poetry.group.dev]
optional = true
include-groups = ["format", "test"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
poethepoet = "^0.39.0"
