[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "InvestmentPortfolioAPP - Backend"
version = "0.1.0"
readme = "README.md"
license = "MIT"
authors = ["Dtar380"]
maintainers = ["Dtar380"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.127.0"
pydantic = "^2.12.5"
asyncpg = "^0.31.0"
sqlmodel = "^0.0.29"
alembic = "^1.17.2"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
httpx = "^0.28.1"
yfinance = "^1.0"
psycopg = {extras = ["binary"], version = "^3.3.2"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
black = "^25.12.0"
isort = "^7.0.0"
pylint = "^4.0.4"
mypy = "^1.19.1"
flake8-pyproject = "^1.2.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-modern = "^0.7.4"
rich = "^14.2.0"

[tool.poetry.group.dev]
optional = true
include-groups = ["format", "test"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
poethepoet = "^0.39.0"

[tool.black]
line-length = 80
target-version = ["py313"]
skip-string-normalization = false
skip-magic-trailing-comma = false
include = '\.pyi?$'
exclude = '''
/(
  # Directorios generados
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | build
  | dist
  | migrations  # Archivos de migración de DB
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
ensure_newline_before_comments = true

known_first_party = ["APP"]

known_third_party = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "pydantic",
    "yfinance",
    "jinja2",
    "httpx",
    "asyncpg",
    "psycopg",
    "passlib",
]

extra_standard_library = ["typing_extensions"]

sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

force_single_line = false
force_sort_within_sections = true

add_imports = [
    "from __future__ import annotations",
]

skip_glob = [
    "*/migrations/*",
    "*/venv/*",
    "*/__pycache__/*"
]

[tool.mypy]
python_version = "3.13"

# === CONFIGURACIONES ESTRICTAS ===
# Requerir anotaciones de tipos
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# Verificar llamadas a funciones sin tipos
check_untyped_defs = true

# No permitir Any implícito
no_implicit_optional = true
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true

# === ADVERTENCIAS ===
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true

# === VERIFICACIONES ADICIONALES ===
strict_equality = true
strict_optional = true

# === CONFIGURACIÓN DE ERRORES ===
show_error_codes = true
show_column_numbers = true
show_error_context = true
color_output = true
error_summary = true

# === PATHS Y ARCHIVOS ===
mypy_path = ["APP"]
namespace_packages = true
exclude = [
    "tests/",
    "migrations/",
    "venv/",
    "__pycache__/"
]

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "fastapi_mail.*",
    "sqlmodel.*",
    "pydantic.*",
    "asyncpg.*",
    "psycopg.*",
    "passlib.*",
    "httpx.*"
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 80
extend-ignore = ["E203","E501","E701","E266","F403","F405","B008","F401", "B010", "F821"]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    ".pytest_cache",
    "build",
    "dist",
    "migrations",
    "__pycache__"
]

[tool.pytest.ini_options]
filterwarnings = ["ignore::UserWarning"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-q",
    "--color=yes",
    "--strict-markers",
    "--strict-config",
    "--disable-socket"
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
